# pvcast-core

./: .pre-commit-config.yaml  LICENSE  LICENSE.md  README.md  config.yaml  main.py  pyproject.toml
.devcontainer/: devcontainer.json
.github/: CODEOWNERS  CONTRIBUTING.md  copilot-instructions.md  renovate.json
.github/workflows/: linting.yaml  release.yaml  tests.yaml  typing.yaml
src/pvcast/: __main__.py
src/pvcast/commandline/: commandline.py
src/pvcast/config/: configreader.py  const.py  schemas.py
src/pvcast/data/proc/: cec_inverters.csv
src/pvcast/forecasting/: forecasting.py
src/pvcast/model/: const.py  forecasting.py  manager.py  model.py  plant.py
src/pvcast/util/: units.py
src/pvcast/weather/: __init__.py  api.py  atmospheric.py  clearoutside.py  const.py  homeassistant.py  weather.py
src/pvcast/webserver/: app.py  const.py
src/pvcast/webserver/models/: base.py  live.py
src/pvcast/webserver/routers/: clearsky.py  dependencies.py  helpers.py  historical.py  live.py
tests/: conftest.py  const.py  ruff.toml  test_hello.py
tests/commandline/: test_commandline.py
tests/configreader/: test_configreader.py
tests/configs/: test_config_error.yaml  test_config_malformed.yaml  test_config_micro.yaml  test_config_missing.yaml  test_config_missing_sources.yaml  test_config_simple.yaml  test_config_string.yaml
tests/data/: clearoutside.html  clearoutside.txt  config.yaml  pvgis_out.csv  weather.csv
tests/forecasting/: test_forecasting.py
tests/manager/: test_manager.py
tests/model/: test_forecasting.py  test_model.py  test_plant.py
tests/unit/configreader/: test_configreader.py
tests/unit/homeassistant/: test_hass_api_unit.py
tests/unit/model/: test_forecasting.py
tests/unit/util/: test_timestamps.py
tests/unit/weather/: conftest.py  test_weather.py
tests/unit/webserver/: test_helpers.py  test_webserver.py
tests/util/: test_units.py
tests/weather/: conftest.py  test_atmospheric.py  test_clearoutside.py  test_utils.py  test_weather.py  test_weather_platform.py
tests/webserver/: conftest.py  test_helpers.py  test_webserver.py
